--- a/app/src/main/res/layout/collectiongriditem.xml
+++ b/app/src/main/res/layout/collectiongriditem.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-
+    android:layout_height="match_parent"
+    >
 
     <ImageView
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:id="@+id/newimage"
         android:focusable="false"
-        android:background="#ffeef7f0"
-        android:scaleType="fitXY"
+        android:scaleType="fitStart"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:focusableInTouchMode="false"
-        android:layout_gravity="center_horizontal"
-        android:adjustViewBounds="true"
         />
 
 
