--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -16,7 +16,8 @@
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/shoppingadviserlogo" />
+        android:src="@drawable/shoppingadviserlogo"
+        android:id="@+id/imageView3" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -42,11 +43,29 @@
         android:id="@+id/button2"
         android:layout_below="@+id/textView2"
         android:layout_toStartOf="@+id/button" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/search_edit_text"
+        android:layout_below="@+id/button"
+        android:layout_toStartOf="@+id/searchbtn" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Search"
+        android:id="@+id/searchbtn"
+        android:layout_below="@+id/button"
+        android:layout_alignStart="@+id/button" />
+
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="90dp"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:id="@+id/horizontalScrollView"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/searchbtn"
+        android:layout_alignEnd="@+id/searchbtn">
         <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="horizontal"
