--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -42,21 +42,22 @@
         android:text="Login"
         android:id="@+id/button2"
         android:layout_below="@+id/textView2"
-        android:layout_toStartOf="@+id/button" />
+        android:layout_toStartOf="@+id/button"
+        android:layout_marginTop="40dp"/>
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:id="@+id/search_edit_text"
-        android:layout_below="@+id/button"
-        android:layout_toStartOf="@+id/searchbtn" />
+        android:layout_alignBottom="@+id/searchbtn"
+         />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Search"
         android:id="@+id/searchbtn"
-        android:layout_below="@+id/button"
-        android:layout_alignStart="@+id/button" />
+        android:layout_marginTop="120dp"
+        android:layout_marginLeft="250dp"/>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -64,8 +65,7 @@
         android:padding="10dp"
         android:id="@+id/horizontalScrollView"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/searchbtn"
-        android:layout_alignEnd="@+id/searchbtn">
+        android:layout_marginTop="180dp">
         <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="horizontal"
@@ -77,19 +77,24 @@
                 android:id="@+id/gridview"
                 android:layout_width="1000dp"
                 android:layout_height="500dp"
-                android:columnWidth="200dp"
+                android:columnWidth="250dp"
                 android:numColumns="auto_fit"
-                android:verticalSpacing="150dp"
-                android:horizontalSpacing="40dp"
+                android:verticalSpacing="25dp"
+                android:horizontalSpacing="20dp"
                 android:gravity="center"
                 android:scrollbars="horizontal"
                 android:descendantFocusability="blocksDescendants"
                 />
 
 
-
-
-
         </LinearLayout>
     </HorizontalScrollView>
+
+    <Button
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:id="@+id/showmore"
+        android:text="show more"
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
