--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -186,9 +186,10 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pay Now"
-        android:id="@+id/checkoutpaynowbutton"
+        android:text="Order Now"
+        android:id="@+id/checkoutordernowbutton"
         android:layout_below="@+id/checkoutzipedittext"
+        android:onClick="onStartTransaction"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
