--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -12,24 +12,31 @@
         android:layout_height="wrap_content" />
     <EditText
         android:id="@+id/etEmail"
+        android:layout_marginTop="30dp"
+
         android:layout_width="match_parent"
         android:layout_marginBottom="10dp"
         android:layout_height="wrap_content" />
     <TextView
         android:layout_width="wrap_content"
+        android:layout_below="@+id/etEmail"
+        android:layout_marginTop="30dp"
+android:id="@+id/password"
         android:text="Password"
         android:layout_height="wrap_content" />
     <EditText
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/password"
         android:inputType="textPassword"
         android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/bRegister"
         android:text="Register"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-</LinearLayout>
+</RelativeLayout>
